--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@strapi/plugin-i18n": "^4.1.12",
     "@strapi/plugin-users-permissions": "4.1.12",
+    "@strapi/provider-email-sendgrid": "^4.4.0",
     "@strapi/provider-upload-local": "^4.2.3",
     "@strapi/strapi": "4.1.12",
-    "better-sqlite3": "7.4.6",
-    "strapi-provider-email-nodemailer": "^3.6.10"
+    "better-sqlite3": "7.4.6"
   },
   "author": {
     "name": "A Strapi developer"
